Single page map scaffolding view and html. Upgrade single page to Leaflet 1.0 - ProjectMap will server as the main view for all project pages - Side pannel can be displayed or hidden by switching between detail-hidden and detail-display - Upgrade JUST project_map.html to Leaflet 1.0. Since other pages will be absorbed by this one, I am putting off the full upgrade until the other views have been reworked. - Currently only standard tests for ProjectMapView. Will add more as more functionality is added. - Removed L.Deflate temporarily. Running into issues with upgrade to leaflet 1.0

--- a/cadasta/core/static/css/main.css
+++ b/cadasta/core/static/css/main.css
@@ -5350,27 +5350,34 @@ ul.resource-actions > li {
 
 /* =Map location details in right column
 -------------------------------------------------------------- */
-.content-single .detail h2 span {
-  font-size: 11px;
-  color: #a6a7a8;
-  display: block;
-  text-transform: uppercase;
-  padding-bottom: 2px; }
+.content-single.detail-hidden .detail {
+  display: none; }
 
-.content-single .detail .btn-group {
-  margin-left: auto;
-  margin-right: auto; }
+.content-single.detail-hidden #project-map {
+  width: 151%; }
 
-.content-single .detail .top-add {
-  margin-bottom: -30px; }
+.content-single.detail-display .detail {
+  transition: all 0.5s ease-in-out; }
+  .content-single.detail-display .detail h2 span {
+    font-size: 11px;
+    color: #a6a7a8;
+    display: block;
+    text-transform: uppercase;
+    padding-bottom: 2px; }
+  .content-single.detail-display .detail .btn-group {
+    margin-left: auto;
+    margin-right: auto; }
+  .content-single.detail-display .detail .top-add {
+    margin-bottom: -30px; }
 
-#project-map h2 {
-  padding-bottom: 0; }
-
-#project-map .btn-wrap {
-  padding: 4px 4px 5px; }
-  #project-map .btn-wrap .btn-block {
-    margin: 0 auto; }
+#project-map {
+  transition: all 0.5s ease-in-out; }
+  #project-map h2 {
+    padding-bottom: 0; }
+  #project-map .btn-wrap {
+    padding: 4px 4px 5px; }
+    #project-map .btn-wrap .btn-block {
+      margin: 0 auto; }
 
 /* =Forms
 -------------------------------------------------------------- */
@@ -5522,11 +5529,14 @@ textarea.form-control {
 .well {
   margin-bottom: 10px; }
 
+#mapid {
+  height: 100%;
+  z-index: 1; }
+
 /* =Leaflet popups
 -------------------------------------------------------------- */
 .leaflet-container {
-  font-family: "Roboto", Helvetica, Arial, "Noto Sans Bengali", sans-serif !important;
-  z-index: 1; }
+  font-family: "Roboto", Helvetica, Arial, "Noto Sans Bengali", sans-serif !important; }
 
 .leaflet-popup-content-wrapper {
   border-radius: 4px !important;
@@ -5596,9 +5606,6 @@ textarea.form-control {
 
 /* =Map controls
 -------------------------------------------------------------- */
-.leaflet-top, .leaflet-bottom {
-  z-index: 200; }
-
 /* =Labels
 -------------------------------------------------------------- */
 div#id_extents_location_map {
